--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,7 +24,4 @@
 @import './components/modal-form';
 @import './components/control-list';
 @import './components/portfolio-cards';
-
-
-
-
+@import './components/scrolltoup';
