--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -3,6 +3,7 @@
 .mobile-menu-socials {
   @extend %list;
 }
+
 .mobile-menu {
   position: fixed;
   top: 0;
@@ -22,6 +23,11 @@
 
   &.is-open{
     transform: translatex(0);
+  }
+}
+.mobile-menu {
+  @media screen and (min-width: 768px) {
+    display: none;
   }
 }
 .mobile-menu-nav {
