--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -24,10 +24,10 @@
     color: $accent-color;
   }
 }
-.icon-menu-cross,
-.icon-menu {
-fill: currentColor;
-}
+// .icon-menu-cross,
+// .icon-menu {
+// fill: currentColor;
+// }
 .icon-menu-cross {
   display: none;
 }
